[package]
name = "dvd"
description = "DVD screensaver in your terminal!"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17"
anyhow = "1.0"
crossterm = "0.25"
rand = "0.8"
